<resources>
    <string name="app_name">MovieHub</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="sort_by_popularity_text">Sort by popularity</string>
    <string name="sort_by_top_rated_text">Sort by top rated</string>
    <string name="my_favourites_text">Favourites</string>
    <string name="plot_summary">Plot summary</string>
    <string name="release_title">Release Title</string>
    <string name="ratings">Ratings</string>
    <string name="release_date">Release Date</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="no_internet_message">You are currently not connected to the internet</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_read_more_text">Read more</string>
    <string name="watch_trailer_text">Watch Trailer</string>
    <string name="favourite_text">Like</string>
    <string name="no_data_available">No data available</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="watch_on_youtube">Watch on Youtube</string>
    <string name="your_favourite">You like this!</string>
    <string name="popular_movies_text">Popular Movies</string>
    <string name="top_rated_text">Top Rated Movies</string>
    <string name="no_reviews_yet_text">No reviews yet</string>
</resources>
